-XX:+UseCGroupMemoryLimitForHeap is not required with OpenJDK 11